--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,13 @@
 	text-align: center;
 }
 
+img {
+	max-width: 100%;
+	display: block;
+	height: auto;
+	margin: 0 auto;
+}
+
 #tribute-info {
 	width: 35%;
 }
