--- a/styles/style.css
+++ b/styles/style.css
@@ -1,29 +1,26 @@
-* {
+html {
+	font-size: 10px;
+}
+
+body {
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+		'Helvetica Neue', Arial, sans-serif;
+	font-size: 1.6rem;
+	line-height: 1.5;
+	text-align: center;
 	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+}
+
+h1 {
+	font-size: 4rem;
+	margin-bottom: 0;
 }
 
 #main {
-	background-color: #eee;
-	padding: 2% 1%;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-}
-
-#title {
-	text-align: center;
-}
-
-#img-div {
-	width: 100%;
-	background-color: #fff;
-}
-
-#img-div figure {
-	text-align: center;
+	margin: 30px 8px;
+	padding: 15px;
+	border-radius: 5px;
+	background: #eee;
 }
 
 img {
@@ -33,6 +30,35 @@ img {
 	margin: 0 auto;
 }
 
-#tribute-info {
-	width: 35%;
+#img-div {
+	background: #fff;
+	padding: 10px;
+	margin: 0;
+}
+
+#img-caption {
+	margin: 15px 0 5px 0;
+}
+
+#headline {
+	margin: 50px 0;
+	text-align: center;
+}
+
+ul {
+	max-width: 550px;
+	margin: 0 auto 50px auto;
+	text-align: left;
+	line-height: 1.6;
+}
+
+li {
+	margin: 16px 0;
+}
+
+blockquote {
+	font-style: italic;
+	max-width: 545px;
+	margin: 0 auto 50px auto;
+	text-align: left;
 }
