--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,7 @@ body {
 	font-size: 1.6rem;
 	line-height: 1.5;
 	text-align: center;
+	color: #333;
 	margin: 0;
 }
 
@@ -16,11 +17,36 @@ h1 {
 	margin-bottom: 0;
 }
 
+@media (max-width: 460px) {
+	h1 {
+		font-size: 3.5rem;
+		line-height: 1.2;
+	}
+}
+
+h2 {
+	font-size: 3.25rem;
+}
+
+a {
+	color: #477ca7;
+}
+
+a:visited {
+	color: #74638f;
+}
+
 #main {
 	margin: 30px 8px;
 	padding: 15px;
 	border-radius: 5px;
 	background: #eee;
+}
+
+@media (max-width: 460px) {
+	#main {
+		margin: 0;
+	}
 }
 
 img {
@@ -38,6 +64,12 @@ img {
 
 #img-caption {
 	margin: 15px 0 5px 0;
+}
+
+@media (max-width: 460px) {
+	#img-caption {
+		font-size: 1.4rem;
+	}
 }
 
 #headline {
